--- a/movies/package.json
+++ b/movies/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.71.5",
+    "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "jose": "^6.0.10",
     "next": "15.2.4",
@@ -16,6 +18,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.1.0"
